# better_tactics

./: .dockerignore  .env  .gitignore  CHANGELOG.md  CONFIG.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml
.github/workflows/: docker-publish.yml  rust.yml
assets/: better-tactics.js  style.css
assets/images/pieces/: README.md
assets/scripts/: puzzle-board.js  puzzle-history.js  puzzle-ui.js  stats.js
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: better-tactics.ts  lichess-integration.ts  lichess.ts  puzzle-board.ts  puzzle-history.ts  puzzle-ui.ts  stats.ts  util.ts
migrations/: 20231005181358_initial.sql  20231005181817_rename-users.sql  20231005182121_add-app-data.sql  20231005182523_add-all-puzzle-fields.sql  20231006161104_add_user_theme_ratings.sql  20231008130912_add_integer_primary_keys.sql  20231012182101_add_rating_to_review.sql  20231019190100_add_user_next_puzzle.sql  20231020130910_add_skipped_puzzles_table.sql  20231020182340_add_last_backup_date.sql  20231022193157_add_integer_id_to_puzzles.sql  20231022193157_add_integer_ids_and_foreign_keys.sql  20231101093942_add_app_version_to_appdata.sql
src/: api.rs  app.rs  assets.rs  config.rs  controllers.rs  db.rs  lichess.rs  main.rs  rating.rs  route.rs  services.rs  srs.rs  time.rs  util.rs
src/api/: tactics.rs  user.rs
src/app/: backup.rs
src/controllers/: about.rs  api.rs  index.rs  lichess.rs  puzzle.rs
src/db/: backup.rs  card.rs  dbresult.rs  migration.rs  puzzle.rs  user.rs
src/services/: tactics_service.rs  user_service.rs
templates/: about.html  base.html  footer.html  header.html  index.html  internal_server_error.html  not_found.html  puzzle-history.html  puzzle.html  retry-lichess-puzzles.html  reviews-done.html  theme-selector.html
