[package]
name = "better-tactics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
askama_warp = "0.13.0"
chrono = "0.4.31"
csv = "1.2.2"
dotenvy = "0.15.7"
env_logger = "0.10.0"
futures = "0.3.28"
itertools = "0.11.0"
lazy_static = "1.4.0"
log = "0.4.20"
reqwest = { version = "0.11.20", features = ["stream"] }
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio"] }
static_dir = "0.2.0"
tempfile = "3.8.0"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
warp = "0.3.5"
zstd = "0.12.4"
